--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
 
 </head>
   <body>
-    <audio autoplay>
-        <source src="img/pernikahan.mp3" type="audio/mp3"/>
-    </audio> 
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
         <main>
             <h4>Kepada Bapak/Ibu/Saudara/i, </h4>
@@ -157,12 +154,68 @@
         </div>
       </section>
 
+      <section id="story" class="story">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-10 text-center">
+                    <span>Bagaimana Cinta Kami Bersemi</span>
+                    <h2>Cerita Kami</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, sed ex atque explicabo possimus beatae! Quos fugit nihil sunt quasi dignissimos, incidunt fugiat quibusdam necessitatibus animi, perspiciatis commodi rerum aliquid!</p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image" style="background-image: url(img/floral.jpg);"></div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h3>Pertama bertemu</h3>
+                                    <span>1 Juni 2000</span>
+                                </div>
+                                <div class="timeline-body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eligendi, illo illum ipsum corrupti in?</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image" style="background-image: url(img/floral.jpg);"></div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h3>Mulai serius</h3>
+                                    <span>1 Juni 2000</span>
+                                </div>
+                                <div class="timeline-body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eligendi, illo illum ipsum corrupti in?</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image" style="background-image: url(img/floral.jpg);"></div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h3>Mulai serius</h3>
+                                    <span>1 Juni 2000</span>
+                                </div>
+                                <div class="timeline-body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eligendi, illo illum ipsum corrupti in?</p>
+                                </div>
+                            </div>
+                        </li>
+                        
+                    </ul>
+                </div>
+            </div>
+        </div>
+      </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script>
     simplyCountdown('.simply-countdown',{
         year: 2024, // required
-            month: 12, // required
-            day: 28, // required
+            month: 11, // required
+            day: 20, // required
             hours: 0, // Default is 0 [0-23] integer
             minutes: 0, // Default is 0 [0-59] integer
             seconds: 0, // Default is 0 [0-59] integer
@@ -173,6 +226,20 @@
                 seconds: { singular: 'detik', plural: 'detik' }
             },
     });
-</script>  
+</script>
+
+<script>
+    const stickyTop = document.querySelector('.sticky-top');
+    const offcanvas = document.querySelector('.offcanvas');
+
+
+    offcanvas.addEventListener('show.bs.offcanvas', function() {
+        stickyTop.style.overflow = 'visible';
+    });
+    
+    offcanvas.addEventListener('hidden.bs.offcanvas', function() {
+        stickyTop.style.overflow = 'hidden';
+    });
+</script>
 </body>
 </html>
