--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Aini & Satoru</h1>
             <p>Akan melangsungkan resepsi pernikahan dalam:</p>
             <div class="simply-countdown"></div>
-            <a href="#home" class="btn btn-lg mt-4">Lihat Undangan</a>
+            <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Lihat Undangan</a>
         </main>
     </section>
 
@@ -220,10 +220,127 @@
                     <p>Lorem ipsum dolor sit amet</p>
                 </div>
             </div>
+            <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
+                <div class="col mt-3">
+                    <a href="img/gallery/𝔾𝕠𝕛𝕠 𝕊𝕒𝕥𝕠𝕣𝕦.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+                        <img src="img/gallery/thumbnail/1.jpg" alt="" class="img-fluid w-100 rounded">
+                    </a>
+                </div>
+                <div class="col mt-3">
+                    <a href="img/gallery/Hey Pandas, Post Your Favorite Plushie (Closed).jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+                        <img src="img/gallery/thumbnail/gojo.jpg" alt="" class="img-fluid w-100 rounded">
+                    </a>
+                </div>
+                <div class="col mt-3">
+                    <a href="img/gallery/Gojo Satoru Official Art Wallpaper.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+                        <img src="img/gallery/thumbnail/2.jpg" alt="" class="img-fluid w-100 rounded">
+                    </a>
+                </div>
+                <div class="col mt-3">
+                    <a href="img/gallery/4.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+                        <img src="img/gallery/thumbnail/3.jpg" alt="" class="img-fluid w-100 rounded">
+                    </a>
+                </div>
+            </div>
         </div>
       </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      <section id="rsvp" class="rsvp">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-10 text-center">
+                    <h2>Konfirmasi Kehadiran</h2>
+                    <p>Isi form dibawah ini untuk melakukan konfirmasi kehadiran</p>
+                </div>
+            </div>
+            <form class="row row-cols-md-auto g-3 align-items-center justify-content-center" method="POST" 
+            action="https://script.google.com/macros/s/AKfycbwzKsi7EaSTJ6gBMrULjGc7B1_TZXKoARIxzgMPBM1-2g6VQAlJqO8ZVmBThNo2ehWMQQ/exec" id="my-form">
+                <div class="col-12">
+                    <div class="mb-3">
+                        <label for="nama" class="form-label">Nama</label>
+                        <input type="text" class="form-control" id="nama" name="nama">
+                      </div>
+                </div>
+                <div class="col-12">
+                    <div class="mb-3">
+                        <label for="jumlah" class="form-label">Jumlah</label>
+                        <input type="number" class="form-control" id="jumlah" name="jumlah" min="1" max="5" length="1" value="1">
+                      </div>
+                </div>
+                <div class="col-12">
+                    <div class="mb-3">
+                        <label for="status" class="form-label">Status</label>
+                        <select name="status" id="status" class="form-select">
+                            <option selected>Pilih salah satu</option>
+                            <option value="1">Hadir</option>
+                            <option value="0">Tidak Hadir</option>
+                        </select>
+                      </div>
+                </div>
+                <div class="col-12" style="margin-top: 35px;">
+                    <button class="btn btn-primary">Kirim</button>
+                </div>
+                </form>
+            </div>
+      </section>
+
+      <section id="gifts" class="gifts">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 col-10 text-center">
+                    <span>Ungkapan tanda kasih</span>
+                    <h2>Kirim Hadiah</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores fugiat sed vero quaerat a hic earum iusto quis, rem, illum exercitationem ab aliquam mollitia libero delectus numquam repellendus beatae.</p>
+                </div>
+            </div>
+            <div class="row justify-content-center text-center">
+                <div class="col-md-6">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <div class="fw-bold">BRI</div>
+                            017501059836500 - Nur Aini Pertiwi
+                        </li>
+                        <li class="list-group-item">
+                            <div class="fw-bold">Gopay</div>
+                            <img src="img/qr.jpeg" alt="Gopay QR" class="img-thumbnail" width="150">
+                        </li>
+                      </ul>
+                </div>
+            </div>
+            </div>
+      </section>
+
+      <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <small class="block">&copy; 2023 Gojo dan Ay Ay Wedding. All Rights Reserved</small>
+                    <small class="block">Design by <a href="https://instagram.com/nanamiiisannnn">@nanamiiisannnn</a>.</small>
+                <ul class="mt-3">
+                    <li><a href="https://instagram.com/nanamiiisannnn"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="#"><i class="bi bi-youtube"></i></a></li>
+                    <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                    <li><a href="#"><i class="bi bi-tiktok"></i></a></li>
+                </ul>
+                </div>
+            </div>
+        </div>
+      </footer>
+
+      <div id="audio-container">
+        <audio id="song" autoplay loop>
+            <source src="img/audio/love.mp3" type="audio/mp3">
+        </audio>
+
+        <div class="audio-icon-wrapper" style="display: none;">
+            <i class="bi bi-pause-circle"></i>
+        </div>
+
+      </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
 <script>
     simplyCountdown('.simply-countdown',{
         year: 2024, // required
@@ -253,6 +370,85 @@
     offcanvas.addEventListener('hidden.bs.offcanvas', function() {
         stickyTop.style.overflow = 'hidden';
     });
+</script>
+
+<script>
+      const rootElement = document.querySelector(":root");
+      const audioIconWrapper = document.querySelector('.audio-icon-wrapper');
+      const audioIcon = document.querySelector('.audio-icon-wrapper i');
+      const song = document.querySelector('#song');
+      let isPlaying = false;
+
+      function disableScroll () {
+        scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+        scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
+
+
+        window.onscroll = function () {
+            window.scrollTo(scrollTop, scrollLeft);
+        }
+
+      
+        rootElement.style.scrollBehavior = 'auto';
+    }
+    function enableScroll() {
+        window.onscroll = function () {}
+        rootElement.style.scrollBehavior = 'smooth';
+        // localStorage.setItem('opened','true');
+        playAudio();
+    }
+    // if(!localStorage.getItem('opened')) {
+    //     disableScroll();
+    // }
+
+    function playAudio() {
+    
+        song.volume = 0.5;
+        audioIconWrapper.style.display = 'flex';
+        song.play();
+        isPlaying = true;
+
+    }
+
+    audioIconWrapper.onclick = function() {
+        if (isPlaying) {
+            song.pause();
+            audioIcon.classList.remove('bi-disc');
+            audioIcon.classList.add('bi-pause-circle');
+        } else {
+            song.play();
+            audioIcon.classList.add('bi-disc');
+            audioIcon.classList.remove('bi-pause-circle');
+        }
+
+        isPlaying = !isPlaying;
+    }
+    disableScroll();
+</script>
+
+<script>
+    window.addEventListener("load", function() {
+  const form = document.getElementById('my-form');
+  form.addEventListener("submit", function(e) {
+    e.preventDefault();
+    const data = new FormData(form);
+    const action = e.target.action;
+    fetch(action, {
+      method: 'POST',
+      body: data,
+    })
+    .then(() => {
+      alert("Konfirmasi kehadiran terkirim");
+    })
+  });
+});
+
+</script>
+
+<script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const nama = urlParams.get('nama');
+    console.log(nama);
 </script>
 </body>
 </html>
