--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aini & Satoru Wedding</title>
+    <title>Ai & Satoru Wedding</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,8 +27,8 @@
   <body>
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
         <main>
-            <h4>Kepada Bapak/Ibu/Saudara/i, </h4>
-            <h1>Aini & Satoru</h1>
+            <h4><span>Kepada Bapak/Ibu/Saudara/i, </span></h4>
+            <h1>Ai & Satoru</h1>
             <p>Akan melangsungkan resepsi pernikahan dalam:</p>
             <div class="simply-countdown"></div>
             <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Lihat Undangan</a>
@@ -37,13 +37,13 @@
 
     <nav class="navbar navbar-expand-md bg-transparent sticky-top mynavbar">
         <div class="container">
-          <a class="navbar-brand" href="#">Aini & Satoru</a>
+          <a class="navbar-brand" href="#">Ai & Satoru</a>
           <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Aini & Satoru</h5>
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Ai & Satoru</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -74,7 +74,11 @@
                     <div class="row">
                         <div class="col-8 text-end">
                             <h3>Gojo Satoru</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto culpa nesciunt quibusdam quidem veniam, reiciendis recusandae qui? Quam delectus laudantium expedita tenetur suscipit deleniti exercitationem aspernatur? Itaque reprehenderit excepturi fugiat.</p>
+                            <p>Gojo satoru lahir tanggal 7 Desember 1989 yang juga keturunan dari Michizane Sugawara seorang penyair dan politikus Jepang. Gojo Satoru memiliki kekuatan yang sangat besar yang berasal dari matanya sehingga ia di nobatkan sebagai Special Grade tingkat tertinggi penyihir jujutsu</p>
+                            <p>Six eyes, kemampuan memprediksi gerakan lawan</p>
+                            <p>Limitless, kemampuan manipulasi ruang dan waktu</p>
+                            <p>Black Flash, kemampuan untuk membuat luka dalam bagi lawan</p>
+                            <p>Weapon Proficiency, kemampuan menggunakan berbagai jenis senjata</p>
                             <p>Putra dari Bpk. Lorem <br> dan <br> ibu Ipsum</p>
                         </div>
                         <div class="col-4">
@@ -89,8 +93,8 @@
                             <img src="img/rr.jpeg" alt="gojo satoru" class="img-responsive rounded-circle">
                         </div>
                         <div class="col-8">
-                            <h3>Aini</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto culpa nesciunt quibusdam quidem veniam, reiciendis recusandae qui? Quam delectus laudantium expedita tenetur suscipit deleniti exercitationem aspernatur? Itaque reprehenderit excepturi fugiat.</p>
+                            <h3>Ai</h3>
+                            <p>Saya hanya wanita biasa pecinta gojo satoru dan yuuji itadori</p>
                             <p>Putra dari Bpk. Lorem <br> dan <br> ibu ipsum</p>
                         </div>
                     </div>
@@ -105,6 +109,7 @@
                 <div class="col-md-8 col-10 text-center" >
                     <h2>Informasi Acara</h2>
                     <p class="alamat">Alamat : Gedung PT Mencari Cinta Sejati <br> Jl. Menuju Isekai</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d32641173.71002743!2d67.8217598!3d-2.9535814!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e3b75b4fc414925%3A0x482df6dda7b16c7c!2sPT.%20Mencari%20Cinta%20Sejati%20(persero)!5e0!3m2!1sen!2sid!4v1733801179345!5m2!1sen!2sid" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <a href="https://maps.app.goo.gl/Di2jnLBejQPiTb7o9" target="_blank" class="btn btn-light btn-sm my-4">Klik Lihat Alamat</a>
                     <p class="description ">Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak ada tanda-tanda sedang di langsungkan pernikahan, boleh jadi Anda salah jadwal atau salah tempat</p>
                 </div>
@@ -160,7 +165,7 @@
                 <div class="col-md-8 col-10 text-center">
                     <span>Bagaimana Cinta Kami Bersemi</span>
                     <h2>Cerita Kami</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, sed ex atque explicabo possimus beatae! Quos fugit nihil sunt quasi dignissimos, incidunt fugiat quibusdam necessitatibus animi, perspiciatis commodi rerum aliquid!</p>
+                    <p>Perjalanan Bertemu Gojo Satoru</p>
                 </div>
             </div>
 
@@ -168,38 +173,38 @@
                 <div class="col">
                     <ul class="timeline">
                         <li>
-                            <div class="timeline-image" style="background-image: url(img/floral.jpg);"></div>
+                            <div class="timeline-image" style="background-image: url(img/gojo\ basket.jpg);"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h3>Pertama bertemu</h3>
-                                    <span>1 Juni 2000</span>
+                                    <span>2020</span>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eligendi, illo illum ipsum corrupti in?</p>
+                                    <p>Ketika itu timeline sedang ramai membahas sesosok pemuda bermata biru, berwajah tampan, memiliki jurus yang sangat op sehingga ia menarik banyak fans. Sebagai orang fomo, saya pun mencari dari mana karakter itu berasal, dan ternyata ia adalah Gojo Satoru dari anime Jujutsu Kaisen, nilai plus nya dia bisa main basket hihiii</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image" style="background-image: url(img/floral.jpg);"></div>
+                            <div class="timeline-image" style="background-image: url(img/sugusato.jpg);"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h3>Mulai serius</h3>
-                                    <span>1 Juni 2000</span>
+                                    <span>2020-2021</span>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eligendi, illo illum ipsum corrupti in?</p>
+                                    <p>Saya mulai tertarik dengan dia dan mulai mencari tau tentang dia dan memutuskan untuk menonton anime nya dan disitu saya sempat tertarik dengan karakter lain nya Suguru Geto karena dia baik, sangat penyabar, pikiran nya lebih dewasa dari gojo, dan sangat tenang di segala situasi, sayang nya dia salah mengartikan dunia dan menjadi villain, tpi gk papa aku tetap sayang suguru geto tapi bukan kenjaku. Akhir tahun 2021, diumumkan akan dirilis movie pertama jujutsu kaisen dengan judul Jujutsu Kaisen 0, saya ikut menonton di bioskop </p>
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <div class="timeline-image" style="background-image: url(img/floral.jpg);"></div>
+                            <div class="timeline-image" style="background-image: url(img/kenjaku.jpg);"></div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Mulai serius</h3>
-                                    <span>1 Juni 2000</span>
+                                    <h3>Pilihan Terkahir</h3>
+                                    <span>2023</span>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eligendi, illo illum ipsum corrupti in?</p>
+                                    <p>Pertengahan tahun 2023 jujutsu kaisen season 2 rilis, timeline mulai ramai lagi membahas gojo satoru, banyak orang yang kemudian sedih dengan karakter dia karena dia dikabarkan akan di die terbelah jadi dua bjirr..., di season ini saya sempat goyah juga karena Yuji Itadori dan Sukuna di Buff habis2an tapi juga membuat gojo di nerf habis2an juga (marah), tapi saya sabar. </p>
                                 </div>
                             </div>
                         </li>
@@ -222,23 +227,23 @@
             </div>
             <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
                 <div class="col mt-3">
-                    <a href="img/gallery/𝔾𝕠𝕛𝕠 𝕊𝕒𝕥𝕠𝕣𝕦.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
-                        <img src="img/gallery/thumbnail/1.jpg" alt="" class="img-fluid w-100 rounded">
+                    <a href="img/gallery/download (3).jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+                        <img src="img/gallery/thumbnail/77.jpg" alt="" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
-                    <a href="img/gallery/Hey Pandas, Post Your Favorite Plushie (Closed).jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
-                        <img src="img/gallery/thumbnail/gojo.jpg" alt="" class="img-fluid w-100 rounded">
+                    <a href="img/gallery/Geto Suguru and Gojo Satoru wallpaper poster jjk Jujutsu Kaisen.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+                        <img src="img/gallery/thumbnail/6.jpg" alt="" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
-                    <a href="img/gallery/Gojo Satoru Official Art Wallpaper.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
-                        <img src="img/gallery/thumbnail/2.jpg" alt="" class="img-fluid w-100 rounded">
+                    <a href="img/gallery/これは私の死を意味するだろう.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+                        <img src="img/gallery/thumbnail/8.jpg" alt="" class="img-fluid w-100 rounded">
                     </a>
                 </div>
                 <div class="col mt-3">
-                    <a href="img/gallery/4.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
-                        <img src="img/gallery/thumbnail/3.jpg" alt="" class="img-fluid w-100 rounded">
+                    <a href="img/gallery/★.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+                        <img src="img/gallery/thumbnail/10.jpg" alt="" class="img-fluid w-100 rounded">
                     </a>
                 </div>
             </div>
@@ -280,7 +285,31 @@
                 <div class="col-12" style="margin-top: 35px;">
                     <button class="btn btn-primary">Kirim</button>
                 </div>
-                </form>
+            </form>
+
+            <div class="row justify-content-center mt-5">
+                <div class="col-md-6">
+                    <div id="disqus_thread"></div>
+                        <script>
+                            /**
+                            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+                            /*
+                            var disqus_config = function () {
+                            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                            };
+                            */
+                            (function() { // DON'T EDIT BELOW THIS LINE
+                            var d = document, s = d.createElement('script');
+                            s.src = 'https://gojo-ay-ay-wedding.disqus.com/embed.js';
+                            s.setAttribute('data-timestamp', +new Date());
+                            (d.head || d.body).appendChild(s);
+                            })();
+                        </script>
+                        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                </div>
+            </div>
             </div>
       </section>
 
@@ -290,7 +319,7 @@
                 <div class="col-md-8 col-10 text-center">
                     <span>Ungkapan tanda kasih</span>
                     <h2>Kirim Hadiah</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dolores fugiat sed vero quaerat a hic earum iusto quis, rem, illum exercitationem ab aliquam mollitia libero delectus numquam repellendus beatae.</p>
+                    <p>Asupan biar nyengir :P</p>
                 </div>
             </div>
             <div class="row justify-content-center text-center">
@@ -314,7 +343,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center">
-                    <small class="block">&copy; 2023 Gojo dan Ay Ay Wedding. All Rights Reserved</small>
+                    <small class="block">&copy; 2024 Ai dan Satoru Wedding. All Rights Reserved</small>
                     <small class="block">Design by <a href="https://instagram.com/nanamiiisannnn">@nanamiiisannnn</a>.</small>
                 <ul class="mt-3">
                     <li><a href="https://instagram.com/nanamiiisannnn"><i class="bi bi-instagram"></i></a></li>
@@ -329,7 +358,7 @@
 
       <div id="audio-container">
         <audio id="song" autoplay loop>
-            <source src="img/audio/love.mp3" type="audio/mp3">
+            <source src="img/audio/benar.mp3" type="audio/mp3">
         </audio>
 
         <div class="audio-icon-wrapper" style="display: none;">
@@ -344,7 +373,7 @@
 <script>
     simplyCountdown('.simply-countdown',{
         year: 2024, // required
-            month: 11, // required
+            month: 12, // required
             day: 20, // required
             hours: 0, // Default is 0 [0-23] integer
             minutes: 0, // Default is 0 [0-59] integer
@@ -447,8 +476,14 @@
 
 <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const nama = urlParams.get('nama');
+    const nama = urlParams.get('n') || '';
+    const pronoun = urlParams.get('p') || 'Bapak/Ibu/Saudara/i';
+
     console.log(nama);
+
+    const namaContainer = document.querySelector('.hero h4 span');
+    namaContainer.innerText = `${pronoun} ${nama},`.replace(/ ,$/, ',');
+    document.querySelector('#nama').value = nama;
 </script>
 </body>
 </html>
