--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <p>Akan melangsungkan resepsi pernikahan dalam:</p>
             <div class="simply-countdown"></div>
             <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Lihat Undangan</a>
+            <p>Klik button di atas terlebih dahulu untuk pengalaman yang lebih baik</p>
         </main>
     </section>
 
