--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
   <body>
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
         <main>
-            <h4><span>Kepada Bapak/Ibu/Saudara/i, </span></h4>
-            <h1>Ai & Satoru</h1>
-            <p>Akan melangsungkan resepsi pernikahan dalam:</p>
+            <h4 style="color: black;"><span>Kepada Bapak/Ibu/Saudara/i, </span></h4>
+            <h1 style="color: black;">Ai & Satoru</h1>
+            <p style="color: black;">Akan melangsungkan resepsi pernikahan dalam:</p>
             <div class="simply-countdown"></div>
             <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Lihat Undangan</a>
-            <p>Klik button di atas terlebih dahulu untuk pengalaman yang lebih baik</p>
+            <p style="color: black;">Klik button di atas terlebih dahulu untuk pengalaman yang lebih baik</p>
+
         </main>
     </section>
 
