--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
+    <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-end text-white">
       <main>
+        <h1>Candra & Ika</h1>
         <h4><span>Kepada Bapak/Ibu/Saudara/i, </span></h4>
-        <h1>Ai & Satoru</h1>
-        <p>Akan melangsungkan resepsi pernikahan dalam:</p>
+        <!-- <h4>ainiii</h4> -->
+        <p>Akan melangsungkan resepsi pernikahan dalam</p>
         <div class="simply-countdown"></div>
         <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()">Lihat Undangan</a>
         <!-- <p style="color: black;">Klik button di atas terlebih dahulu untuk pengalaman yang lebih baik</p> -->
@@ -34,13 +35,13 @@
 
     <nav class="navbar navbar-expand-md bg-transparent sticky-top mynavbar">
       <div class="container">
-        <a class="navbar-brand" href="#">Ai & Satoru</a>
+        <a class="navbar-brand" href="#">Candra & Ika</a>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Ai & Satoru</h5>
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Candra & Ika</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -62,7 +63,7 @@
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
             <h2>Acara Pernikahan</h2>
-            <h3>Diselenggarakan pada 20 November 2024, di PT Mencari Cinta Sejati</h3>
+            <h3>Diselenggarakan pada 12 Oktober 2025,</h3>
             <p>oleh karena itu, dengan segala hormat, kami bermaksud untuk mengundang bapak/ibu/saudara/i, untuk hadir pada acar pernikahan kami</p>
           </div>
         </div>
@@ -70,23 +71,23 @@
           <div class="col-lg-6">
             <div class="row">
               <div class="col-8 text-end">
-                <h3>Gojo Satoru</h3>
+                <h3>Candra Afriansyah</h3>
                 <p>
-                  Gojo satoru lahir tanggal 7 Desember 1989 yang juga keturunan dari Michizane Sugawara seorang penyair dan politikus Jepang. Gojo Satoru memiliki kekuatan yang sangat besar yang berasal dari matanya sehingga ia di nobatkan
-                  sebagai Special Grade tingkat tertinggi penyihir jujutsu
+                  Candra lahir tanggal 8 April 1996 yang juga keturunan dari Michizane Sugawara seorang penyair dan politikus Jepang. Gojo Satoru memiliki kekuatan yang sangat besar yang berasal dari matanya sehingga ia di nobatkan sebagai
+                  Special Grade tingkat tertinggi penyihir jujutsu
                 </p>
                 <p>Six eyes, kemampuan memprediksi gerakan lawan</p>
                 <p>Limitless, kemampuan manipulasi ruang dan waktu</p>
                 <p>Black Flash, kemampuan untuk membuat luka dalam bagi lawan</p>
                 <p>Weapon Proficiency, kemampuan menggunakan berbagai jenis senjata</p>
                 <p>
-                  Putra dari Bpk. Lorem <br />
+                  Putra dari Bpk. Supian <br />
                   dan <br />
-                  ibu Ipsum
+                  Ibu Casriah
                 </p>
               </div>
               <div class="col-4">
-                <img src="img/gojo.jpg" alt="gojo satoru" class="img-responsive rounded-circle" />
+                <img src="img/prewed 12.jpg" alt="gojo satoru" class="img-responsive rounded-circle" />
               </div>
             </div>
           </div>
@@ -94,10 +95,10 @@
           <div class="col-lg-6">
             <div class="row">
               <div class="col-4">
-                <img src="img/rr.jpeg" alt="gojo satoru" class="img-responsive rounded-circle" />
+                <img src="img/prewed 2.jpg" alt="gojo satoru" class="img-responsive rounded-circle" />
               </div>
               <div class="col-8">
-                <h3>Ai</h3>
+                <h3>Ika Fajriati</h3>
                 <p>Saya hanya wanita biasa pecinta gojo satoru dan yuuji itadori</p>
                 <p>
                   Putra dari Bpk. Lorem <br />
@@ -116,10 +117,7 @@
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
             <h2>Informasi Acara</h2>
-            <p class="alamat">
-              Alamat : Gedung PT Mencari Cinta Sejati <br />
-              Jl. Menuju Isekai
-            </p>
+            <p class="alamat">Alamat : Mesjd Raya Rusunawa Nagrak, Jakarta Utara <br /></p>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d32641173.71002743!2d67.8217598!3d-2.9535814!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e3b75b4fc414925%3A0x482df6dda7b16c7c!2sPT.%20Mencari%20Cinta%20Sejati%20(persero)!5e0!3m2!1sen!2sid!4v1733801179345!5m2!1sen!2sid"
               width="100%"
@@ -250,23 +248,23 @@
         </div>
         <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
           <div class="col mt-3">
-            <a href="img/gallery/download (3).jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
-              <img src="img/gallery/thumbnail/77.jpg" alt="" class="img-fluid w-100 rounded" />
+            <a href="img/gallery/foto1.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+              <img src="img/gallery/thumbnail/foto1.jpg" alt="" class="img-fluid w-100 rounded" />
             </a>
           </div>
           <div class="col mt-3">
-            <a href="img/gallery/Geto Suguru and Gojo Satoru wallpaper poster jjk Jujutsu Kaisen.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
-              <img src="img/gallery/thumbnail/6.jpg" alt="" class="img-fluid w-100 rounded" />
+            <a href="img/gallery/foto2.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+              <img src="img/gallery/thumbnail/foto2.jpg" alt="" class="img-fluid w-100 rounded" />
             </a>
           </div>
           <div class="col mt-3">
-            <a href="img/gallery/これは私の死を意味するだろう.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
-              <img src="img/gallery/thumbnail/8.jpg" alt="" class="img-fluid w-100 rounded" />
+            <a href="img/gallery/foto3.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+              <img src="img/gallery/thumbnail/foto3.jpg" alt="" class="img-fluid w-100 rounded" />
             </a>
           </div>
           <div class="col mt-3">
-            <a href="img/gallery/★.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
-              <img src="img/gallery/thumbnail/10.jpg" alt="" class="img-fluid w-100 rounded" />
+            <a href="img/gallery/foto4.jpg" data-toggle="lightbox" data-caption="gojo ganteng" data-gallery="mygallery">
+              <img src="img/gallery/thumbnail/foto4.jpg" alt="" class="img-fluid w-100 rounded" />
             </a>
           </div>
         </div>
