--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
             <div class="row">
               <div class="col-8 text-end">
                 <h3>Candra Afriansyah</h3>
-                <p>
+                <!-- <p>
                   Candra lahir tanggal 8 April 1996 yang juga keturunan dari Michizane Sugawara seorang penyair dan politikus Jepang. Gojo Satoru memiliki kekuatan yang sangat besar yang berasal dari matanya sehingga ia di nobatkan sebagai
                   Special Grade tingkat tertinggi penyihir jujutsu
                 </p>
                 <p>Six eyes, kemampuan memprediksi gerakan lawan</p>
                 <p>Limitless, kemampuan manipulasi ruang dan waktu</p>
                 <p>Black Flash, kemampuan untuk membuat luka dalam bagi lawan</p>
-                <p>Weapon Proficiency, kemampuan menggunakan berbagai jenis senjata</p>
+                <p>Weapon Proficiency, kemampuan menggunakan berbagai jenis senjata</p> -->
                 <p>
                   Putra dari Bpk. Supian <br />
                   dan <br />
@@ -99,11 +99,11 @@
               </div>
               <div class="col-8">
                 <h3>Ika Fajriati</h3>
-                <p>Saya hanya wanita biasa pecinta gojo satoru dan yuuji itadori</p>
+                <!-- <p>Saya hanya wanita biasa pecinta gojo satoru dan yuuji itadori</p> -->
                 <p>
-                  Putra dari Bpk. Lorem <br />
+                  Putra dari Bpk. Ahmad Baihaqi <br />
                   dan <br />
-                  ibu ipsum
+                  ibu Ibu Hikmah
                 </p>
               </div>
             </div>
@@ -119,7 +119,7 @@
             <h2>Informasi Acara</h2>
             <p class="alamat">Alamat : Mesjd Raya Rusunawa Nagrak, Jakarta Utara <br /></p>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d32641173.71002743!2d67.8217598!3d-2.9535814!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e3b75b4fc414925%3A0x482df6dda7b16c7c!2sPT.%20Mencari%20Cinta%20Sejati%20(persero)!5e0!3m2!1sen!2sid!4v1733801179345!5m2!1sen!2sid"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.037571043543!2d106.9508805!3d-6.1256465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6a21a97b35eb85%3A0x17e607b0b0d84f5b!2sMasjid%20raya%20rusunawa%20nagrak!5e0!3m2!1sid!2sid!4v1758447619671!5m2!1sid!2sid"
               width="100%"
               height="150"
               style="border: 0"
@@ -127,7 +127,7 @@
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
-            <a href="https://maps.app.goo.gl/Di2jnLBejQPiTb7o9" target="_blank" class="btn btn-light btn-sm my-4">Klik Lihat Alamat</a>
+            <a href="https://maps.app.goo.gl/waWDs4XQPP41v8BZ9" target="_blank" class="btn btn-light btn-sm my-4">Klik Lihat Alamat</a>
             <p class="description">Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak ada tanda-tanda sedang di langsungkan pernikahan, boleh jadi Anda salah jadwal atau salah tempat</p>
           </div>
         </div>
@@ -139,11 +139,11 @@
                 <div class="row justify-content-center">
                   <div class="col-md-6">
                     <i class="bi bi-clock d-block"></i>
-                    <span>08.00-10.00</span>
+                    <span>Jam 09.00</span>
                   </div>
                   <div class="col-md-6">
                     <i class="bi bi-calendar-heart d-block"></i>
-                    <span>Minggu, 20 November 2024</span>
+                    <span>Minggu, 12 Oktober 2025</span>
                   </div>
                 </div>
               </div>
@@ -157,11 +157,11 @@
                 <div class="row justify-content-center">
                   <div class="col-md-6">
                     <i class="bi bi-clock d-block"></i>
-                    <span>11.00 - selesai</span>
+                    <span>Jam 12.00 s.d Selesai </span>
                   </div>
                   <div class="col-md-6">
                     <i class="bi bi-calendar-heart d-block"></i>
-                    <span>Minggu, 20 November 2024</span>
+                    <span>Minggu, 12 Oktober 2025</span>
                   </div>
                 </div>
               </div>
@@ -341,7 +341,7 @@
           <div class="col-md-8 col-10 text-center">
             <span>Ungkapan tanda kasih</span>
             <h2>Kirim Hadiah</h2>
-            <p>Asupan biar nyengir :P</p>
+            <!-- <p>Asupan biar nyengir :P</p> -->
           </div>
         </div>
         <div class="row justify-content-center text-center">
@@ -349,10 +349,10 @@
             <ul class="list-group">
               <li class="list-group-item">
                 <div class="fw-bold">BRI</div>
-                017501059836500 - Nur Aini Pertiwi
+                005801017030536 - Candra Afriansyah
               </li>
               <li class="list-group-item">
-                <div class="fw-bold">Gopay</div>
+                <div class="fw-bold">BRI</div>
                 <img src="img/qr.jpeg" alt="Gopay QR" class="img-thumbnail" width="150" />
               </li>
             </ul>
@@ -365,8 +365,8 @@
       <div class="container">
         <div class="row">
           <div class="col text-center">
-            <small class="block">&copy; 2024 Ai dan Satoru Wedding. All Rights Reserved</small>
-            <small class="block">Design by <a href="https://instagram.com/nanamiiisannnn">@nanamiiisannnn</a>.</small>
+            <small class="block">&copy; 2025 Candra and Ika Wedding. All Rights Reserved</small>
+            <small class="block">Design by <a href="https://instagram.com/ayyyamgoyeng">@ayyyamgoyeng</a>.</small>
             <ul class="mt-3">
               <li>
                 <a href="https://instagram.com/nanamiiisannnn"><i class="bi bi-instagram"></i></a>
