--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </p>
               </div>
               <div class="col-4">
-                <img src="img/prewed 12.jpg" alt="gojo satoru" class="img-responsive rounded-circle" />
+                <img src="img/cowok.jpg" alt="gojo satoru" class="img-responsive rounded-circle" />
               </div>
             </div>
           </div>
@@ -95,7 +95,7 @@
           <div class="col-lg-6">
             <div class="row">
               <div class="col-4">
-                <img src="img/prewed 2.jpg" alt="gojo satoru" class="img-responsive rounded-circle" />
+                <img src="img/cewek.jpg" alt="gojo satoru" class="img-responsive rounded-circle" />
               </div>
               <div class="col-8">
                 <h3>Ika Fajriati</h3>
@@ -186,48 +186,38 @@
           <div class="col">
             <ul class="timeline">
               <li>
-                <div class="timeline-image" style="background-image: url(img/gojo\ basket.jpg)"></div>
+                <div class="timeline-image" style="background-image: url(img/prewed\ 12.jpg)"></div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h3>Pertama bertemu</h3>
-                    <span>2020</span>
+                    <h3>Pertama Bertemu</h3>
+                    <span>Maret 2020</span>
                   </div>
                   <div class="timeline-body">
-                    <p>
-                      Ketika itu timeline sedang ramai membahas sesosok pemuda bermata biru, berwajah tampan, memiliki jurus yang sangat op sehingga ia menarik banyak fans. Sebagai orang fomo, saya pun mencari dari mana karakter itu
-                      berasal, dan ternyata ia adalah Gojo Satoru dari anime Jujutsu Kaisen, nilai plus nya dia bisa main basket hihiii
-                    </p>
+                    <p>kami di kenalkan oleh salah satu teman melalui sebuah panggilan Telepon.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
-                <div class="timeline-image" style="background-image: url(img/sugusato.jpg)"></div>
+                <div class="timeline-image" style="background-image: url(img/prewed2.jpg)"></div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h3>Mulai serius</h3>
-                    <span>2020-2021</span>
+                    <h3>Menjalin Hubungan</h3>
+                    <span>Mei 2020</span>
                   </div>
                   <div class="timeline-body">
-                    <p>
-                      Saya mulai tertarik dengan dia dan mulai mencari tau tentang dia dan memutuskan untuk menonton anime nya dan disitu saya sempat tertarik dengan karakter lain nya Suguru Geto karena dia baik, sangat penyabar, pikiran
-                      nya lebih dewasa dari gojo, dan sangat tenang di segala situasi, sayang nya dia salah mengartikan dunia dan menjadi villain, tpi gk papa aku tetap sayang suguru geto tapi bukan kenjaku. Akhir tahun 2021, diumumkan akan
-                      dirilis movie pertama jujutsu kaisen dengan judul Jujutsu Kaisen 0, saya ikut menonton di bioskop
-                    </p>
+                    <p>kami membangun komunikasi perlahan, saling mengenal lebih dalam, dan ada rasa nyaman yang muncul begitu saja.</p>
                   </div>
                 </div>
               </li>
               <li>
-                <div class="timeline-image" style="background-image: url(img/kenjaku.jpg)"></div>
+                <div class="timeline-image" style="background-image: url(img/foto2.jpg)"></div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h3>Pilihan Terkahir</h3>
-                    <span>2023</span>
+                    <h3>Pilihan Terakhir</h3>
+                    <span>31 Agustus 2025</span>
                   </div>
                   <div class="timeline-body">
-                    <p>
-                      Pertengahan tahun 2023 jujutsu kaisen season 2 rilis, timeline mulai ramai lagi membahas gojo satoru, banyak orang yang kemudian sedih dengan karakter dia karena dia dikabarkan akan di die terbelah jadi dua bjirr...,
-                      di season ini saya sempat goyah juga karena Yuji Itadori dan Sukuna di Buff habis2an tapi juga membuat gojo di nerf habis2an juga (marah), tapi saya sabar.
-                    </p>
+                    <p>Setelah saling menguatkan selama beberapa tahun, kami memutuskan untuk melangkah ke jenjang yang lebih serius. Dengan restu kedua keluarga, kami melaksanakan lamaran yang hangat dan disaksikan keluarga.</p>
                   </div>
                 </div>
               </li>
