--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Candra & Ika</h1>
+
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-end text-white">
       <main>
-        <h1>Candra & Ika</h1>
+        <!-- <h1>Candra & Ika</h1> -->
         <h4><span>Kepada Bapak/Ibu/Saudara/i, </span></h4>
         <!-- <h4>ainiii</h4> -->
         <p>Akan melangsungkan resepsi pernikahan dalam</p>
@@ -178,7 +180,7 @@
           <div class="col-md-8 col-10 text-center">
             <span>Bagaimana Cinta Kami Bersemi</span>
             <h2>Cerita Kami</h2>
-            <p>Perjalanan Bertemu Gojo Satoru</p>
+            <!-- <p>Perjalanan Bertemu Gojo Satoru</p> -->
           </div>
         </div>
 
@@ -231,9 +233,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span>Memori Kisah Kami</span>
+            <!-- <span>Memori Kisah Kami</span> -->
             <h2>Galeri Foto</h2>
-            <p>Lorem ipsum dolor sit amet</p>
+            <!-- <p>Lorem ipsum dolor sit amet</p> -->
           </div>
         </div>
         <div class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
